USER SEGMENT pt.2